<resources>
    <string name="aboutFeedbackCategoryTitle">"Feedback"</string>
    <string name="aboutIssuesSummary">"Reportar ao suporte"</string>
    <string name="aboutIssuesTitle">"Suporte Sincroled"</string>
    <string name="aboutLicense">"Termos de Uso"</string>
    <string name="aboutSourceCodeSummary">"Versão corporativa"</string>
    <string name="aboutTranslations">"Help translate this app"</string>
    <plurals name="aboutTranslationsSummary">
        <item quantity="one">"Currently available in %1$d language!"</item>
        <item quantity="other">"Currently available in %1$d languages!"</item>
    </plurals>
    <string name="accept">"Accept"</string>
    <string name="addWaypoint">"Add waypoint"</string>
    <string name="aLocation">"a region"</string>
    <string name="app_name">"BIPE"</string>
    <string name="backgroundLocationPermissionRequestDialogText">"Se você deseja que o Rastreador colete dados de localização mesmo em segundo plano, é necessária permissão para acessar a localização \"o tempo todo\"."</string>
    <string name="backgroundLocationPermissionRequestDialogTitle">"Background Location Permission"</string>
    <string name="backgroundLocationRestrictionNotificationText">"O Android restringe o recebimento de localizações em segundo plano até que o app seja aberto. Clique aqui para abrir e iniciar o rastreamento."</string>
    <string name="backgroundLocationRestrictionNotificationTitle">"Location Tracking Paused"</string>
    <string name="batteryOptimizationWhitelistDialogButtonLabel">"Battery optimization settings"</string>
    <string name="batteryOptimizationWhitelistDialogMessage">"Remover o Rastreador da otimização de bateria ajuda a manter a conexão estável com o servidor."</string>
    <string name="batteryOptimizationWhitelistDialogTitle">"Battery Optimization"</string>
    <string name="cancel">"Cancel"</string>
    <string name="certificateMigrationRequiredOpenSettingsAction">"Open Settings"</string>
    <string name="certificateMigrationRequiredNotificationText">"O Rastreador agora usa certificados do sistema.\n\nSe você usa certificados customizados, adicione-os ao armazenamento do dispositivo."</string>
    <string name="certificateMigrationRequiredNotificationTitle">"Certificate Migration Required"</string>
    <string name="clear_log">"Clear"</string>
    <string name="configurationManagement">"Configuration management"</string>
    <string name="CONNECTED">"Connected"</string>
    <string name="CONNECTING">"Connecting"</string>
    <string name="contact_image">"Contact Image"</string>
    <string name="contactDetailsAccuracy">"Accuracy"</string>
    <string name="contactDetailsAccuracyValue">"%,d m"</string>
    <string name="contactDetailsAltitude">"Altitude"</string>
    <string name="contactDetailsAltitudeValue">"%,d m"</string>
    <string name="contactDetailsBattery">"Battery"</string>
    <string name="contactDetailsBatteryValue">"%d %%"</string>
    <string name="contactDetailsBearing">"Bearing"</string>
    <string name="contactDetailsBearingValue">"%,.0f°"</string>
    <string name="contactDetailsCoordinates">"Coordinates"</string>
    <string name="contactDetailsDistance">"Distance"</string>
    <string name="contactDetailsDistanceUnitKilometres">"km"</string>
    <string name="contactDetailsDistanceUnitMeters">"m"</string>
    <string name="contactDetailsDistanceValue">"%1$,.2f %2$s"</string>
    <string name="contactDetailsSpeed">"Speed"</string>
    <string name="contactDetailsSpeedValue">"%d kph"</string>
    <string name="contactDetailsTopic">"Identifier"</string>
    <string name="contactDetailsTrackerId">"Tracker ID"</string>
    <string name="contactLocationUnknown">"No location is available"</string>
    <string name="contactsListPlaceholder">"No contacts found"</string>
    <string name="copyText">"Copy"</string>
    <string name="currentLocationButtonLabel">"Current location"</string>
    <string name="deleteWaypointConfirmationText">"Do you want to delete this waypoint?"</string>
    <string name="deleteWaypointConfirmationButtonLabel">"Delete"</string>
    <string name="deleteWaypointTitle">"Delete Waypoint"</string>
    <string name="description">"Description"</string>
    <string name="deviceLocationDisabledDialogMessage">"Os serviços de localização estão desativados. O Rastreador precisa deles para funcionar corretamente.

Por favor, ative a localização nas configurações do sistema."</string>
    <string name="deviceLocationDisabledDialogPositiveButtonLabel">"Location Settings"</string>
    <string name="deviceLocationDisabledDialogTitle">"Localização desativada"</string>
    <string name="DISCONNECTED">"Disconnected"</string>
    <string name="divider">"Divider"</string>
    <string name="done_heading">"Done"</string>
    <string name="enjoy_description">"Select preferences from the menu (or use the link below) and configure OwnTracks for your server before using it"</string>
    <string name="ERROR">"Error"</string>
    <string name="ERROR_CONFIGURATION">"Configuration incomplete"</string>
    <string name="errorPreferencesImportFailed">"Import failed: %s"</string>
    <string name="events">"Events"</string>
    <string name="exportConfiguration">"Export"</string>
    <string name="exportLogFilePrompt">"Export log file"</string>
    <string name="exportLogFileSubject">"OwnTracks Log File"</string>
    <string name="exportWaypointsToEndpoint">"Publish Waypoints"</string>
    <string name="fixProblemLabel">"Fix"</string>
    <string name="geocoderDisabled">"Geocoder service is disabled"</string>
    <string name="geocoderError">"An error was received from the geocoder service: %s"</string>
    <string name="geocoderExceptionError">"An error was received from the geocoder service. Check the logs for more details"</string>
    <string name="geocoderIPAddressRejected">"The client IP address was rejected"</string>
    <string name="geocoderProblemNotificationTitle">"Geocoder Problem"</string>
    <string name="geocoderRateLimited">"Geocoder service has been rate limited. Not retrying until %s"</string>
    <string name="geocoderUnavailable">"Geocoder service is temporarily unavailable"</string>
    <string name="icon_description_done">"Done"</string>
    <string name="icon_description_owntracks">"OwnTracks"</string>
    <string name="icon_description_warning">"Warning"</string>
    <string name="IDLE">"Idle"</string>
    <string name="importConfig">"Import"</string>
    <string name="INITIAL">"Initializing"</string>
    <string name="invalidLatitudeError">"Invalid latitude"</string>
    <string name="invalidLongitudeError">"Invalid longitude"</string>
    <string name="latitude">"Latitude"</string>
    <string name="loadActivityNoFileExplorerFound">No file explorer app found</string>
    <string name="loadActivitySelectAFile">Select a file</string>
    <string name="loadActivityApply">Apply</string>
    <string name="loadActivitySectionSettings">Settings</string>
    <string name="loadActivitySectionWaypoints">Waypoints</string>
    <string name="loadActivityErrorInvalidConfigMessage">Message is not a valid configuration message</string>
    <string name="loadActivityErrorExternalConfigDisabled">External configuration loading is disabled</string>
    <string name="loadActivityErrorFetchFailed">Failure fetching config from remote URL</string>
    <string name="loadActivityErrorUnexpectedStatusCode">Unexpected status code: %s</string>
    <string name="loadActivityErrorInvalidConfigUrl">Invalid config URL</string>
    <plurals name="loadActivityUnchangedSettingsCount">
        <item quantity="one">%d setting unchanged</item>
        <item quantity="other">%d settings unchanged</item>
    </plurals>
    <string name="locationPermissionNotGrantedNotification">"Location permission not granted"</string>
    <string name="locationPermissionRequestDialogMessage">"Para rastrear sua posição, conceda permissão de localização ao app Sincroled."</string>
    <string name="locationPermissionRequestDialogTitle">"Permissão de Localização"</string>
    <string name="logViewerActivityTitle">"Logs"</string>
    <string name="longitude">"Longitude"</string>
    <string name="mapLayerDialogTitle">"Map Layers"</string>
    <string name="mapLayerGoogleMapDefaultLabel">"Google Default"</string>
    <string name="mapLayerGoogleMapHybridLabel">"Google Hybrid"</string>
    <string name="mapLayerGoogleMapTerrainLabel">"Google Terrain"</string>
    <string name="mapLayerOpenStreetMapLabel">"OpenStreetMap"</string>
    <string name="mapLayerOpenStreetMapWikimediaLabel">"Wikimedia"</string>
    <string name="menuClear">"Clear"</string>
    <string name="menuContactNavigate">"Navigate"</string>
    <string name="menuContactRequestLocation">"Request Location"</string>
    <string name="mode_heading">"Mode"</string>
    <string name="mode_http_private_label">"HTTP"</string>
    <string name="mode_mqtt_private_label">"MQTT"</string>
    <string name="monitoring_manual">"Manual monitoring mode"</string>
    <string name="monitoring_move">"Move monitoring mode"</string>
    <string name="monitoring_quiet">"Quiet monitoring mode"</string>
    <string name="monitoring_significant">"Significant changes monitoring mode"</string>
    <string name="monitoringModeDialogManualDescription">"Only waypoint transitions published automatically, not locations"</string>
    <string name="monitoringModeDialogManualTitle">"Manual"</string>
    <string name="monitoringModeDialogMoveDescription">"High frequency and accuracy, but high power usage"</string>
    <string name="monitoringModeDialogMoveTitle">"Move"</string>
    <string name="preferencesCategoryConnectionIdentification">"Identification"</string>
    <string name="preferencesDeviceName">"Device ID"</string>
    <string name="preferencesDeviceNameValidationError">"Cannot be empty"</string>
    <string name="preferencesIgnoreInaccurateLocations">"Inaccurate locations"</string>
    <string name="preferencesLocatorDisplacement">"Minimal location displacement"</string>
    <string name="preferencesLocatorInterval">"Location interval"</string>
    <string name="preferencesNotificationEvents">"Events"</string>
    <string name="preferencesNotificationLocation">"Last reported location"</string>
    <string name="preferencesParameters">"Parameters"</string>
    <string name="preferencesPubExtendedData">"Extended data"</string>
    <string name="preferencesPubExtendedDataSummary">"Include battery status, connection type and monitoring mode in location reports"</string>
    <string name="preferencesReporting">"Reporting"</string>
    <string name="preferencesRepublishOnReconnect">"Publish location on MQTT connect"</string>
    <string name="preferencesRepublishOnReconnectSummary">"Publish the last known location and current extended data immediately on connecting to MQTT"</string>
    <string name="preferencesTheme">"Theme"</string>
    <string name="preferencesTrackerId">"Tracker ID"</string>
    <string name="preferencesTrackerIdValidationError">"Must be one or two characters"</string>
    <string name="preferencesUsername">"Username"</string>
    <string name="status_background_service_started_hint">"Background service started"</string>
    <string name="status_battery_optimization_whitelisted_hint">"Battery optimization whitelisted"</string>
    <string name="status_endpoint_queue_hint">"Endpoint queue"</string>
    <string name="status_endpoint_state_hint">"Endpoint state"</string>
    <string name="status_endpoint_state_message_hint">"Endpoint state message"</string>
    <string name="status_last_background_update_hint">"Location service last background update"</string>
    <string name="statusLocationPermissions">"Location permissions granted"</string>
    <string name="title_activity_preferences">"Configurações"</string>
    <string name="title_activity_waypoints">"Pontos de Referência"</string>
    <string name="viewLogs">"View Logs"</string>
</resources>