<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:title="@string/preferencesReporting">
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/preferencesCategoryConnectionIdentification">
        <ValidatingEditTextPreference
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWX1Z1234567890abcdefghijklmnopqrstuvwxyz"
            android:key="deviceId"
            android:title="@string/preferencesDeviceName"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true"
            app:validationError="@string/preferencesDeviceNameValidationError" />
        <Preference
            android:key="selectMascot"
            android:title="Mascote do Perfil"
            android:summary="Escolha um animal para representar você no mapa"
            app:iconSpaceReserved="false" />
        <ValidatingEditTextPreference
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWX1Z1234567890abcdefghijklmnopqrstuvwxyz"
            android:key="tid"
            android:lines="1"
            android:maxLength="2"
            android:title="@string/preferencesTrackerId"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true"
            app:validationError="@string/preferencesTrackerIdValidationError" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/preferencesParameters">
        <androidx.preference.SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="extendedData"
            app:summary="@string/preferencesPubExtendedDataSummary"
            app:title="@string/preferencesPubExtendedData" />
        <androidx.preference.SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="publishLocationOnConnect"
            app:summary="@string/preferencesRepublishOnReconnectSummary"
            app:title="@string/preferencesRepublishOnReconnect" />
        <Preference
            android:key="waypointsScreen"
            android:title="@string/title_activity_waypoints"
            app:iconSpaceReserved="false">
            <intent
                android:targetClass="org.owntracks.android.ui.waypoints.WaypointsActivity" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>
