<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:key="root"
    app:title="@string/title_activity_preferences">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="Geral">
        <IntListPreference
            app:defaultValue="@integer/defaultTheme"
            app:entries="@array/themeLabels"
            app:entryValues="@array/themeValues"
            app:icon="@drawable/ic_baseline_palette_24"
            app:key="theme"
            app:title="@string/preferencesTheme"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="Conexão MQTT">
        <ValidatingEditTextPreference
            android:key="username"
            android:enabled="false"
            android:title="@string/preferencesUsername"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />
        <!-- Password, Host, Port and TLS are hidden as they are managed via API/Defaults -->
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="Identificação e Perfil">
        <ValidatingEditTextPreference
            android:key="deviceId"
            android:enabled="false"
            android:title="@string/preferencesDeviceName"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />
        <Preference
            android:key="selectMascot"
            android:title="Mascote do Perfil"
            android:summary="Escolha um animal para representar você no mapa"
            app:iconSpaceReserved="false" />
        <ValidatingEditTextPreference
            android:key="nickname"
            android:title="Apelido"
            android:summary="Como você deseja ser chamado no mapa (Opcional)"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />
        <ValidatingEditTextPreference
            android:key="tid"
            android:enabled="false"
            android:maxLength="2"
            android:title="Localizador"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="Parâmetros de Rastreio">
        <Preference
            android:key="gpsStatus"
            android:title="GPS / Localização"
            android:summary="Verificando status..."
            app:icon="@drawable/ic_baseline_my_location_24"
            app:iconSpaceReserved="false" />
        <androidx.preference.SwitchPreferenceCompat
            android:key="notifyOnlyEvents"
            android:title="Notificar apenas eventos"
            android:summary="Não envia a posição em tempo real, apenas quando entrar ou sair de um Ponto de Referência"
            app:iconSpaceReserved="false" />
        <org.owntracks.android.support.widgets.EditIntegerPreference
            android:key="locatorInterval"
            android:title="@string/preferencesLocatorInterval"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />
        <org.owntracks.android.support.widgets.EditIntegerPreference
            android:key="locatorDisplacement"
            android:title="@string/preferencesLocatorDisplacement"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />
        <org.owntracks.android.support.widgets.EditIntegerPreference
            android:key="ignoreInaccurateLocations"
            android:title="@string/preferencesIgnoreInaccurateLocations"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="Notificações e Suporte">
        <androidx.preference.SwitchPreferenceCompat
            android:key="notificationLocation"
            android:title="@string/preferencesNotificationLocation"
            app:iconSpaceReserved="false" />
        <androidx.preference.SwitchPreferenceCompat
            android:key="notificationEvents"
            android:title="@string/preferencesNotificationEvents"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="Conta">
        <Preference
            android:key="logout"
            android:title="Sair da Conta"
            android:summary="Deslogar e limpar dados do dispositivo"
            app:icon="@drawable/ic_baseline_power_settings_new_24"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

</PreferenceScreen>
