<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="org.owntracks.android.support.DateFormatter" />
        <import type="android.view.View" />
        <variable
            name="vm"
            type="org.owntracks.android.ui.status.StatusViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF">

        <include
            android:id="@+id/appbar"
            layout="@layout/appbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="16dp"
                android:paddingBottom="16dp">


                <TextView
                    android:id="@+id/connectedStatus"
                    style="@style/ListItemPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="none"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@{vm.endpointState.getLabel(context)}" />

                <TextView
                    style="@style/ListItemSecondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/status_endpoint_state_hint" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:endpointState="@{vm.endpointState}">

                    <TextView
                        android:id="@+id/connectedStatusMessage"
                        style="@style/ListItemPrimary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="none"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        app:endpointState="@{vm.endpointState}" />

                    <TextView
                        style="@style/ListItemSecondary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:paddingBottom="16dp"
                        android:text="@string/status_endpoint_state_message_hint" />
                </LinearLayout>

                <TextView
                    style="@style/ListItemPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="none"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@{vm.endpointQueueLength.toString()}" />

                <TextView
                    style="@style/ListItemSecondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/status_endpoint_queue_hint" />

                <TextView
                    style="@style/ListItemPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="none"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@{vm.currentLocation.time != 0 ? DateFormatter.formatDate(vm.currentLocation.time) : @string/na}" />

                <TextView
                    style="@style/ListItemSecondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/status_last_background_update_hint" />

                <TextView
                    style="@style/ListItemPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="none"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@{vm.serviceStarted != null ? DateFormatter.formatDate(vm.serviceStarted) : @string/na}" />

                <TextView
                    style="@style/ListItemSecondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/status_background_service_started_hint" />


                <LinearLayout
                    android:id="@+id/dozeWhiteListed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical">

                    <TextView
                        style="@style/ListItemPrimary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="none"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:text="@{vm.dozeWhitelisted ? @string/statusBatteryDozeWhiteListEnabled : @string/statusBatteryDozeWhiteListDisabled}" />

                    <TextView
                        style="@style/ListItemSecondary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:paddingBottom="16dp"
                        android:text="@string/status_battery_optimization_whitelisted_hint" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/locationPermissions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical">

                    <TextView
                        style="@style/ListItemPrimary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="none"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:text="@{vm.locationPermissions}" />

                    <TextView
                        style="@style/ListItemSecondary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:paddingBottom="16dp"
                        android:text="@string/statusLocationPermissions" />
                </LinearLayout>

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@android:drawable/divider_horizontal_bright"
                    android:contentDescription="@string/divider"
                    android:scaleType="matrix"
                    android:src="@android:drawable/divider_horizontal_bright" />

                <TextView
                    android:id="@+id/viewLogsButton"
                    style="@style/ListItemPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingLeft="16dp"
                    android:paddingTop="16dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/viewLogs" />
            </LinearLayout>
        </ScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
